crates/nash-driver/tests/snapshots/nested_trace__reconstructs_multiple_boundaries.snap
---
source: crates/nash-driver/tests/nested_trace.rs
description: "module NestedTrace exposing (generate, replay, dependent, siblings, repartition, topologyReplay, topologyBuild, repartitionBuild)\n\nimport Cons exposing (type cons(..))\nimport Prop exposing (type choiceTree(..), type prng(..), type generator, choice, group)\n\nitems : int -> generator (list int)\nitems limit = Prop.listBetween 0 limit (choice 100)\n\ngenerate : bytes -> option (list int, prng)\ngenerate seed = items 4 (Seeded seed Nil)\n\nreplay : choiceTree -> option (list int, prng)\nreplay choiceTree =\n    case choiceTree of\n        Group children -> items 4 (Replayed children Nil)\n        _ -> None\n\nbounds : generator (int, int)\nbounds state =\n    case group (choice 9) state of\n        None -> None\n        Some (offset, next) ->\n            case group (choice offset) next of\n                None -> None\n                Some (index, final) -> Some ((offset + 1, index), final)\n\ndependent : choiceTree -> option ((int, int), prng)\ndependent choiceTree =\n    case choiceTree of\n        Group children -> bounds (Replayed children Nil)\n        _ -> None\n\nlistAndNumber : generator (list int, int)\nlistAndNumber state =\n    case group (items 4) state of\n        None -> None\n        Some (values, next) ->\n            case group (choice 100) next of\n                None -> None\n                Some (number, final) -> Some ((values, number), final)\n\nsiblings : choiceTree -> option ((list int, int), prng)\nsiblings choiceTree =\n    case choiceTree of\n        Group children -> listAndNumber (Replayed children Nil)\n        _ -> None\n\nbranch : generator int\nbranch state = do\n    (mode, next) <- choice 1 state\n    (_, following) <- choice 100 next\n    if mode == 0 then extra mode following else Some (mode, following)\n\nextra mode state =\n    case choice 100 state of\n        None -> None\n        Some (_, final) -> Some (mode, final)\n\nremaining : int -> generator int\nremaining mode state = do\n    (_, next) <- choice 100 state\n    if mode == 1 then choice 100 next else Some (mode, next)\n\nshifted : generator int\nshifted state = do\n    (mode, next) <- group branch state\n    (_, final) <- group (remaining mode) next\n    Some (mode, final)\n\nrepartition : choiceTree -> option (int, prng)\nrepartition tree =\n    case tree of\n        Group children -> shifted (Replayed children Nil)\n        _ -> None\n\nreshaped : generator (int, int)\nreshaped state = do\n    (mode, next) <- choice 1 state\n    (value, final) <- (if mode == 0 then group (group (choice 100)) else choice 100) next\n    Some ((mode, value), final)\n\ntopologyReplay : choiceTree -> option ((int, int), prng)\ntopologyReplay tree =\n    case tree of\n        Group children -> reshaped (Replayed children Nil)\n        _ -> None\n\ntopologyBuild : list int -> option ((int, int), prng)\ntopologyBuild values = reshaped (Rebuilding values Nil)\n\nrepartitionBuild : list int -> option (int, prng)\nrepartitionBuild values = shifted (Rebuilding values Nil)\n"
---
value: (constr 0 (con integer 0) (con integer 0))
rebuilt trace: [Choice(0), Group([Group([Choice(0)])])]
